# sprintloop-app

./: netlify.toml  package-lock.json  package.json
apps/desktop/: package.json
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: .env.example  DEPLOY.md  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: App.tsx  index.css
apps/web/src/components/: AIChatPanel.tsx  ActivityBar.tsx  AgentProgress.tsx  AgentSelector.tsx  AuthScreen.tsx  BottomPanel.tsx  Breadcrumbs.tsx  CodeActionMenu.tsx  CommandPalette.tsx  ComposerPanel.tsx  ContextMenu.tsx  DebugPanel.tsx  DebuggerPanel.tsx  DiagnosticsPanel.tsx  DiffPreviewPanel.tsx  DiffViewer.tsx  EditorPanel.tsx  EditorTabs.tsx  ExtensionsPanel.tsx  FileExplorer.tsx  GitPanel.tsx  InlineDiff.tsx  InlineEditMode.tsx  KanbanBoard.tsx  KeybindingsEditor.tsx  LLMSettings.tsx  MergeConflictEditor.tsx  ModeIndicator.tsx  ModelSelector.tsx  NewProjectModal.tsx  NotificationCenter.tsx  OutlineView.tsx  OutputPanel.tsx  PremiumCommandPalette.tsx  PreviewPanel.tsx  ProblemsPanel.tsx  PromptPanel.tsx  QuickInputDialog.tsx  QuickOpen.tsx  SearchPanel.tsx  (+16 more)
apps/web/src/config/: models.ts
apps/web/src/lib/: database.types.ts  supabase.ts  tauri-bridge.ts
apps/web/src/stores/: auth-store.ts  chat-store.ts  cost-tracker.ts  kanban-store.ts  (+3 more)
landing/: index.html  package-lock.json  package.json
landing/src/: App.tsx  index.css
scripts/: netlify-build.sh
(+281 files in other folders)
