[package]
name = "sprintloop"
version = "0.1.0"
description = "SprintLoop - AI Native Developer Workspace"
authors = ["SprintLoop Team"]
edition = "2021"

[lib]
name = "sprintloop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
